--- a/src/app/pages/rent-venue/rent-venue.component.html
+++ b/src/app/pages/rent-venue/rent-venue.component.html
@@ -1,27 +1,21 @@
 
     <!-- ***** About Us Page ***** -->
-    <div class="page-heading-rent-venue">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Are You Looking For A Venue?</h2>
-                    <span>Check out our venues, pick your choice and fill the reservation application.</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <app-page-heading [type]="type" [title]="title" [content]="content"></app-page-heading>
 
     <div class="rent-venue-tabs">
         <div class="container">
-            <div class="row">
+            <div class="row" >
                 <div class="col-lg-12">
-                    <div class="row">
+                    <div class="row ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs">
+                      <div class="col-lg-12">
                         <ng-container>
-                            <app-tab-options></app-tab-options>
+                          <app-tab-options [type]="type"
+                           [options]="options" (changeTab)="common.selectTab($event, type)"></app-tab-options>
                         </ng-container>
+                      </div>
                         <div class="col-lg-12">
                             <section class='tabs-content'>
-                                <article id='tabs-1'>
+                                <article *ngIf="!common.selectedIndex">
                                     <div class="row">
                                         <div class="col-lg-9">
                                             <div class="right-content">
@@ -50,7 +44,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                <article id='tabs-2'>
+                                    </div>
+                                    </article>
+                                <article *ngIf="common.selectedIndex == 1">
                                     <div class="row">
                                         <div class="col-lg-9">
                                             <div class="right-content">
@@ -73,7 +69,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                <article id='tabs-3'>
+                                    </div>
+                                    </article>
+                                <article *ngIf="common.selectedIndex == 2">
                                     <div class="row">
                                         <div class="col-lg-9">
                                             <div class="right-content">
@@ -97,6 +95,7 @@
                                         </div>
                                     </div>
                         </div>
+                        </article>
 
     <div class="rent-venue-application">
         <div class="container">
