--- a/src/app/pages/shows-events/shows-events.component.html
+++ b/src/app/pages/shows-events/shows-events.component.html
@@ -1,40 +1,20 @@
 <!-- ***** About Us Page ***** -->
-<div class="page-heading-shows-events">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>Our Shows & Events</h2>
-                <span>Check out upcoming and past shows & events.</span>
-            </div>
-        </div>
-    </div>
-</div>
+<app-page-heading [type]="type" [title]="title" [content]="content"></app-page-heading>
 
 <div class="shows-events-tabs">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="row" id="tabs">
+                <div class="row ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs">
                     <div class="col-lg-12">
-                        <div class="heading-tabs">
-                            <div class="row">
-                                <div class="col-lg-8">
-                                    <ul>
-                                      <li><a href='#tabs-1'>Upcoming</a></li>
-                                      <li><a href='#tabs-2'>Past</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col-lg-4">
-                                      <div class="main-dark-button">
-                                          <a (click)="common.navigateTo('ticket-details')">Purchase Tickets</a>
-                                      </div>
-                                </div>
-                            </div>
-                        </div>
+                        <ng-container>
+                            <app-tab-options [type]="type" 
+                            [options]="options" (changeTab)="common.selectTab($event, type)"></app-tab-options>
+                          </ng-container>
                     </div>
                     <div class="col-lg-12">
                         <section class='tabs-content'>
-                            <article id='tabs-1'>
+                            <article *ngIf="!common.selectedIndex">
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="heading"><h2>Upcoming</h2></div>
@@ -227,21 +207,13 @@
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
-                                                <div class="pagination">
-                                                    <ul>
-                                                        <li><a href="#">Prev</a></li>
-                                                        <li><a href="#">1</a></li>
-                                                        <li class="active"><a href="#">2</a></li>
-                                                        <li><a href="#">3</a></li>
-                                                        <li><a href="#">Next</a></li>
-                                                    </ul>
-                                                </div>
+                                                <app-navigation-bar></app-navigation-bar>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </article>                            
-                            <article id='tabs-2'>
+                            <article *ngIf="common.selectedIndex == 1">
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="heading"><h2>Upcoming</h2></div>
