--- a/src/app/pages/ticket-details/ticket-details.component.html
+++ b/src/app/pages/ticket-details/ticket-details.component.html
@@ -1,14 +1,5 @@
 <!-- ***** About Us Page ***** -->
-<div class="page-heading-shows-events">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>Tickets On Sale Now!</h2>
-                <span>Check out upcoming and past shows & events and grab your ticket right now.</span>
-            </div>
-        </div>
-    </div>
-</div>
+<app-page-heading [type]="type" [title]="title" [content]="content"></app-page-heading>
 
 <div class="ticket-details-page">
     <div class="container">
