--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -1,14 +1,5 @@
 <!-- ***** About Us Page ***** -->
-<div class="page-heading-shows-events">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2>Tickets On Sale Now!</h2>
-                <span>Check out upcoming and past shows & events and grab your ticket right now.</span>
-            </div>
-        </div>
-    </div>
-</div>
+<app-page-heading [type]="type" [title]="title" [content]="content"></app-page-heading>
 
 <div class="tickets-page">
     <div class="container">
@@ -193,15 +184,7 @@
                 </div>
             </div>
             <div class="col-lg-12">
-                <div class="pagination">
-                    <ul>
-                        <li><a href="#">Prev</a></li>
-                        <li><a href="#">1</a></li>
-                        <li class="active"><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">Next</a></li>
-                    </ul>
-                </div>
+                <app-navigation-bar></app-navigation-bar>
             </div>
         </div>
     </div>
