--- a/src/app/shared/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/navigation-bar/navigation-bar.component.html
@@ -1,1 +1,9 @@
-<p>navigation-bar works!</p>
+<div class="pagination">
+    <ul>
+        <li><a href="#">Prev</a></li>
+        <li><a href="#">1</a></li>
+        <li class="active"><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">Next</a></li>
+    </ul>
+</div>
